## =========
Version 2.1-9 [2018-03-01] (Development version)

Changes in existing functions:
  - seqformat():
    - For 'from = "SPELL"' and 'process = FALSE',
      'pdata = "auto"' is now equivalent to NULL instead of
      raising an error. Also, using argument 'pvar' with
      'pdata = NULL' now raises a warning instead of
      an error and 'pvar' is simply ignored.
    - For 'from = "SPELL"', an error is raised when columns
      referred to by 'begin' and 'end' are of class "Date".
    - When 'from = "SPELL"' or 'to = "SPELL"', an error is
      raised when the birth year column of pdata is of
      class "Date". Integer values are expected.
  - seqplot(): for type "r" (seqrplot), an error is raised 
      when a group has less than two cases.

Bug fixes:
  - seqformat(): An unneeded warning was raised when data 
      was a matrix with a single string element.
  - seqdef(): Bad handling of 'missing' argument when
      informat = "SPS" or "SPELL".
  
## =========
Version 2.0-8 [2018-01-26]

Changes in existing functions:
  - seqcost()}: argument 'miss.cost.fixed' is now NULL by
    default and will be set as FALSE when method = "INDELS" or
    "INDELSLOG", and as TRUE otherwise.
  - seqpcplot(): new logical 'weighted' argument to control
    whether weights should be used or not.

Bug fixes:
  - seqrplot() and seqplot(..., type="r", ...): the method and
    other related arguments for computing the diss matrix when
    the later was not provided was not recognized.
  - seqplot(): Fixed some unused argument issues.

Misc:
  - Vignette: Suppressed the loading of two unused LaTeX packages
    (subfigure and afterpage) that prevented the vignette to be built
    under OSX.
  - Declaring use of C++11 for log1p: 'SystemRequirements: C++11'
    declaration in DESCRIPTION and math.h header in NMSdistance.cpp.
  - Internal function checkargs() renamed as TraMineR.check.depr.args()
    and made public for use in TraMineRextras.



## =========