@@ -8,7 +8,7 @@ This is the plot method for state sequence objects of class \code{stslist} creat
 \method{plot}{stslist}(x, idxs = NULL, weighted = TRUE, sortv = NULL,
   cpal = NULL, missing.color = NULL, ylab = NULL,
   yaxis = TRUE, xaxis = TRUE, ytlab = NULL, ylas = 0,
-  xtlab = NULL, xtstep = NULL, cex.axis = 1,
+  xtlab = NULL, xtstep = NULL, tick.last = FALSE, cex.axis = 1, 
   tlim, cex.plot, ...)
 }
 \arguments{
@@ -47,7 +47,10 @@ This is the plot method for state sequence objects of class \code{stslist} creat
 
   \item{xtstep}{optional interval at which the tick-marks and labels of the x-axis are displayed. For example, with \code{xtstep=3} a tick-mark is drawn at position 1, 4, 7, etc... The display of the corresponding labels depends on the available space and is dealt with automatically. If unspecified, the \code{xtstep} attribute of the \code{x} object is used.}
 
+  \item{tick.last}{Logical. Should a tick mark be enforced at the last position on the x-axis?}
+
   \item{cex.axis}{Axis annotation magnification. See \code{\link{par}}.}
+
   \item{tlim}{Deprecated. Use \code{idxs} instead.}
   \item{cex.plot}{Deprecated. Use \code{cex.axis} instead.}
 
