@@ -8,8 +8,8 @@ This is the plot method for output produced by the \code{\link{seqstatd}} functi
 }
 \usage{
 \method{plot}{stslist.statd}(x, type = "d", cpal = NULL, ylab = NULL,
-  yaxis = TRUE, xaxis = TRUE, xtlab = NULL, xtstep = NULL, cex.axis = 1,
-  space = 0, xlab = NULL, cex.plot, ...)
+  yaxis = TRUE, xaxis = TRUE, xtlab = NULL, xtstep = NULL, tick.last = FALSE,
+  cex.axis = 1, space = 0, xlab = NULL, cex.plot, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -23,6 +23,7 @@ This is the plot method for output produced by the \code{\link{seqstatd}} functi
 
   \item{xtlab}{optional labels for the ticks of the x-axis. If unspecified, the \code{names} attribute of the input \code{x} object is used.}
   \item{xtstep}{optional interval at which the tick-marks and labels of the x-axis are displayed. For example, with xtstep=3 a tick-mark is drawn at position 1, 4, 7, etc... The display of the corresponding labels depends on the available space and is dealt with automatically. If unspecified, the \code{xtstep} attribute of the \code{x} object is used.}
+  \item{tick.last}{Logical. Should a tick mark be enforced at the last position on the x-axis?}
 
   \item{cex.axis}{Axis annotation magnification. See \code{\link{par}}.}
 
